--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --config vite.config.ssr.ts && node prerender.js",
     "build:dev": "vite build --mode development",
+    "build:ssr": "vite build --config vite.config.ssr.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
